# cc_in2p3_afs_backups

NPS/01052018_op_off_simple_save2/: README
NPS/04072018/: README
NPS/04072018/AnaEx02/: AnaEx02.cc
NPS/04072018_flux/backups/: AnaEx02_cC_20180622
NPS/04072018_flux/macros/: test.mac
NPS/09072018/: README
NPS/09072018/backups/: DetectorConstruction.cc_20180710
NPS/09072018/macros/: test_11GeV.mac
NPS/13072018/backups/: EventAction_cc_20180622
NPS/21062018_op_off_simple_save2/: README
NPS/21062018_op_off_simple_save2_pid2/macros/: test_11GeV.mac
NPS/22062018_op_off_simple_save2_pid2/backups/: SteppingAction_cc_20180622
NPS/22062018_op_off_simple_save2_pid2/macros/: test_11GeV.mac
NPS/25062018_op_off_simple_save/macros/: mono_11GeV2.mac  test_11GeV.mac
NPS/25062018_op_off_simple_save2/AnaEx02/: AnaEx02_20180418_1
NPS/25062018_op_off_simple_save2/backups/: EventAction_hh_20180622
NPS/25062018_op_off_simple_save2_pid2/backups/: HistoManager_hh_20180622
NPS/25062018_op_off_simple_save2_pid2/macros/: test_11GeV.mac
NPS/26042018_field_off_op_off_simple_save/AnaEx02/: AnaEx02.cc
NPS/26042018_field_off_op_off_simple_save/macros/: mono_11GeV.mac  test.mac
NPS/26042018_op_off/AnaEx02/: AnaEx02.cc
NPS/26042018_op_off/macros/: mono_11GeV.mac
NPS/26042018_op_off_simple_save/macros/: mono_11GeV.mac  mono_11GeV2.mac
NPS/26042018_op_off_simple_save2/macros/: mono_1GeV_directed_NPS.mac
NPS/27042018_op_off_simple_save2/macros/: mono_11GeV2.mac  test_11GeV.mac
NPS/Mark/hallc_shms_geant-master/: CMakeLists.txt  GNUmakefile  README  SETUP.csh
NPS/Mark/hallc_shms_geant-master/gdml/: debug.gdml
NPS/Mark/hallc_shms_geant-master/include/: SHMSAnalysisManager.hh  SHMSDetectorConstruction.hh  SHMSDetectorHit.hh  SHMSDetectorSD.hh  SHMSEventAction.hh  SHMSPrimaryGeneratorAction.hh  SHMSRunAction.hh  SHMSSteppingAction.hh
NPS/Mark/hallc_shms_geant-master/src/: SHMSAnalysisManager.cc  SHMSDetectorConstruction.cc  SHMSDetectorHit.cc  SHMSDetectorSD.cc  SHMSEventAction.cc  SHMSMagTabulatedField3D.cc  SHMSPrimaryGeneratorAction.cc  SHMSRunAction.cc  SHMSSteppingAction.cc
NPS/delete/converted/: FRESHSOLUTION2TOWATER.CSV  FRESHSOLUTION2TOWATERV2.CSV  FRESHSOLUTIONTOWATER.CSV  NO1FIRSTTIME10MM.CSV  NO1FIRSTTIME10MMAFTERNOON.CSV  NO1FIRSTTIME10MMAFTERNOON30CMSETUP.CSV  NO1FIRSTTIME10MMAFTERNOON30CMSETUP.txt  NO1FOURTHFTIME10MMAFTERNOON30CMSETUP.CSV  NO1FOURTHTIME10MMAFTERNOON.CSV  NO1SECONDFTIME10MMAFTERNOON30CMSETUP.CSV  NO1SECONDTIME10MM.CSV  NO1SECONDTIME10MMAFTERNOON.CSV  NO1THIRDFTIME10MMAFTERNOON30CMSETUP.CSV  NO1THIRDTIME10MMAFTERNOON.CSV  NO1THRIDTIME10MM.CSV  NO2FIRSTTIME10MM.CSV  NO2FIRSTTIME10MMAFTERNOON.CSV  NO2FIRSTTIME10MMAFTERNOON30CMSETUP.CSV  (+87 more)
NPS/draw_damaged/: convert_csv_to_dat.cpp  draw.cpp  draw6.c  test2.cpp
NPS/job/: job.mac  job.sh  master.sh
(+375 files in other folders)
